--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,17 @@
   font-family: satoshi;
 }
 
+.cl-shadow:hover {
+  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.1), 0 22px 22px 0 rgba(0, 0, 0, 0.09),
+    0 51px 30px 0 rgba(0, 0, 0, 0.05), 0 90px 36px 0 rgba(0, 0, 0, 0.01),
+    0 141px 39px 0 rgba(0, 0, 0, 0);
+}
+.shadow-cl {
+  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.1), 0 22px 22px 0 rgba(0, 0, 0, 0.09),
+    0 51px 30px 0 rgba(0, 0, 0, 0.05), 0 90px 36px 0 rgba(0, 0, 0, 0.01),
+    0 141px 39px 0 rgba(0, 0, 0, 0);
+}
+
 @theme {
   --color-brand-main: rgba(11, 61, 145, 1);
   --color-header-bg: rgba(244, 246, 251, 1);
@@ -17,4 +28,6 @@
   --color-white-accent: rgba(252, 250, 243, 1);
   --color-gray-text: rgba(46, 46, 46, 1);
   --color-white-variant: rgba(255, 255, 255, 1);
+  --color-light-gray: rgba(247, 247, 247, 1);
+  --color-yellow-border: rgba(214, 163, 0, 1);
 }
