--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,5 @@
   --color-white-variant: rgba(255, 255, 255, 1);
   --color-light-gray: rgba(247, 247, 247, 1);
   --color-yellow-border: rgba(214, 163, 0, 1);
+  --color-neutral: rgba(227, 227, 227, 1);
 }
